--- a/portifolio/python/interface/mainwindow.ui
+++ b/portifolio/python/interface/mainwindow.ui
@@ -198,7 +198,7 @@
      <string>Cadastrar</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_8">
+   <widget class="QLabel" name="label_image">
     <property name="geometry">
      <rect>
       <x>520</x>
